fixed Ui on smaller screens

--- a/ReadHub_Frontend/src/index.css
+++ b/ReadHub_Frontend/src/index.css
@@ -46,4 +46,6 @@
   --text-label_Large: 14px;
   --text-label_Medium: 12px;
   --text-label_Small: 11px;
+
+  --breakpoint-xsm: 15rem;
 }
